# sanctum-oss

./: .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  forge.toml  sanctum-development-plan.md  sanctum-final-v3.md  sanctum-mockup.jsx  sanctum-next-phases.md  sanctum-release-readiness-assessment.md
.archive/: sanctum-project-assessment.md  sanctum-remediation-plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/sanctum-budget/: Cargo.toml
crates/sanctum-budget/src/: enforcement.rs  error.rs  lib.rs  pricing.rs  property_tests.rs  provider.rs  tracker.rs
crates/sanctum-budget/src/parser/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/sanctum-budget/tests/: loom_budget_tracker.rs
crates/sanctum-cli/: Cargo.toml
crates/sanctum-cli/src/: ipc_client.rs  main.rs  shell.rs
crates/sanctum-cli/src/commands/: audit.rs  budget.rs  config.rs  daemon.rs  doctor.rs  dummy.rs  entropy.rs  fix.rs  hook.rs  hooks.rs  init.rs  mod.rs  proxy.rs  review.rs  run.rs  scan.rs  status.rs
crates/sanctum-daemon/: Cargo.toml
crates/sanctum-daemon/src/: audit.rs  config.rs  context.rs  daemon.rs  event_handler.rs  ipc.rs  main.rs
crates/sanctum-daemon/tests/: e2e_daemon_lifecycle.rs  e2e_ipc_integration.rs
crates/sanctum-firewall/: Cargo.toml
crates/sanctum-firewall/benches/: credential_redaction.rs  hook_dispatch.rs  mcp_policy.rs
crates/sanctum-firewall/src/: allowlist.rs  dummy_registry.rs  entropy.rs  known_secrets.rs  lib.rs  package_policy.rs  patterns.rs  redaction.rs  registry.rs
crates/sanctum-firewall/src/hooks/: claude.rs  mod.rs  protocol.rs
crates/sanctum-firewall/src/mcp/: audit.rs  cel.rs  mod.rs  policy.rs
crates/sanctum-notify/: Cargo.toml
crates/sanctum-notify/src/: lib.rs
crates/sanctum-proxy/: Cargo.toml
crates/sanctum-proxy/src/: ca.rs  connect.rs  error.rs  handler.rs  lib.rs  provider.rs  routing.rs  server.rs  sse.rs  usage.rs
crates/sanctum-proxy/tests/: loom_pending_cost.rs
crates/sanctum-sentinel/: Cargo.toml
crates/sanctum-sentinel/benches/: npm_scanner.rs  pth_analyser.rs
crates/sanctum-sentinel/src/: allowlist.rs  credentials.rs  lib.rs  watcher.rs
crates/sanctum-sentinel/src/network/: collector.rs  detector.rs  exfiltration.rs  mod.rs
crates/sanctum-sentinel/src/npm/: mod.rs  scanner.rs  watcher.rs
crates/sanctum-sentinel/src/pth/: analyser.rs  lineage.rs  mod.rs  quarantine.rs
crates/sanctum-sentinel/tests/: e2e_pth_detection.rs  e2e_quarantine_flow.rs  property_tests.rs
crates/sanctum-types/: Cargo.toml
crates/sanctum-types/benches/: config_parse.rs
crates/sanctum-types/src/: audit.rs  auth.rs  config.rs  errors.rs  fs_safety.rs  ipc.rs  ipc_transport.rs  lib.rs  paths.rs  threat.rs  windows_security.rs
docs/: ARCHITECTURE.md  DEPENDENCY_AUDIT.md  GETTING_STARTED.md  SECURITY.md  THREAT_MODEL.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_pth_analyser.rs
proofs/: README.md
proofs/kani/: pth_analyser.rs
scripts/: install.sh  shell-hook.bash  shell-hook.fish  shell-hook.zsh
tests/fixtures/: benign_path_entry.pth  edge_case_unicode.pth  malicious_base64.pth  malicious_exec.pth  malicious_import.pth  malicious_subprocess.pth
