[workspace]
resolver = "2"
members = [
    "crates/sanctum-types",
    "crates/sanctum-sentinel",
    "crates/sanctum-daemon",
    "crates/sanctum-cli",
    "crates/sanctum-notify",
    "crates/sanctum-firewall",
    "crates/sanctum-budget",
    "crates/sanctum-proxy",
]

[workspace.package]
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/postrv/sanctum"
homepage = "https://sanctum.dev"
description = "The developer security daemon for the AI coding era"
keywords = ["security", "supply-chain", "daemon", "ai", "credentials"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Sanctum Contributors"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
panic = { level = "deny" }
todo = { level = "deny" }
dbg_macro = { level = "deny" }
print_stdout = { level = "deny" }
print_stderr = { level = "deny" }

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
# Shared across crates — single version source of truth
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Dev dependencies
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
