[package]
name = "sanctum-budget"
version = "0.1.0"
edition = "2021"

[dependencies]
sanctum-types = { path = "../sanctum-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
