[package]
name = "sanctum-budget"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM spend tracking and budget enforcement for Sanctum"

[dependencies]
sanctum-types = { path = "../sanctum-types", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
