[package]
name = "sanctum-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sanctum CLI client — init, status, review, scan, budget commands"

[[bin]]
name = "sanctum"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sanctum-types = { path = "../sanctum-types", version = "0.1.0" }
sanctum-firewall = { path = "../sanctum-firewall", version = "0.1.0" }
sanctum-budget = { path = "../sanctum-budget", version = "0.1.0" }
sanctum-proxy = { path = "../sanctum-proxy", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2"
predicates = "3"
