[package]
name = "sanctum-firewall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AI firewall with credential redaction and hook handlers for Sanctum"

[dependencies]
sanctum-types = { path = "../sanctum-types", version = "0.2.1" }
sanctum-sentinel = { path = "../sanctum-sentinel", version = "0.2.1" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "credential_redaction"
harness = false

[[bench]]
name = "hook_dispatch"
harness = false

[[bench]]
name = "mcp_policy"
harness = false
